fixed message spacing + minor fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14211,13 +14211,13 @@ body {
   color: white;
 }
 
-i {
-  margin-top: 0.2em;
-}
-
 .card-spacing {
   margin-top: 20vh;
   margin-bottom: 10vh;
+}
+
+.message-spacing {
+  padding-top: 3.5rem;
 }
 
 .navbar-laravel {
